Version 5.0.5

  Bugs fixed
  ----------
  Bug #25605 BINARY and VARBINARY is returned as a string 

Version 5.0.4 2-28-2007

  Bugs fixed
  ----------
  Bug #25443 ExecuteScalar() hangs when more than one bad result 
  Bug #24802 Error Handling 
  Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
  Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
  Bug #25458 Opening connection hangs 
  Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters   
  Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
  Bug #25609 MySqlDataAdapter.FillSchema 
  Bug #25928 Invalid Registry Entries 
  Bug #25912 selecting negative time values gets wrong results 
  Bug #25906 Typo makes GetSchema with DataTypes collection throw an exception   
  Bug #25907 DataType Column of DataTypes collection does'nt contain the correct CLR Datatype   
  Bug #25950 DataSourceInformation collection contains incorrect values 
  Bug #26430 Will not install under Vista   
  Bug #26152 Opening a connection is really slow 
  Bug #24373 High CPU utilization when no idle connection 
  Bug #24957 MySql.Data.Types.MySqlConversionException is not marked as Serializable. 
  Bug #25603 Critial ConnectionPool Error in Connector.Net 5.03 
  Bug #26660 MySqlConnection.GetSchema fails with NullReferenceException for Foreign Keys 

  Other changes
  -------------
  Return parameters created with DeriveParameters now have the name RETURN_VALUE
  Fixed problem with parameter name hashing where the hashes were not getting updated
       or removed in certain situations.
  Fixed problem with calling stored functions when a return parameter was not given
  Fixed problem that prevented use of SchemaOnly or SingleRow command behaviors with
       sprocs or prepared statements
  Assembly now properly appears in the Visual Studio 2005 Add/Remove Reference dialog