@@ -30,32 +30,36 @@ using System.Globalization;
 
 namespace MySql.Data.MySqlClient
 {
-	/// <include file='docs/MySqlCommandBuilder.xml' path='docs/class/*'/>
+    /// <include file='docs/MySqlCommandBuilder.xml' path='docs/class/*'/>
 #if !PocketPC
-	[ToolboxItem(false)]
-	[System.ComponentModel.DesignerCategory("Code")]
+    [ToolboxItem(false)]
+    [System.ComponentModel.DesignerCategory("Code")]
 #endif
-	public sealed class MySqlCommandBuilder : DbCommandBuilder
-	{
-		#region Constructors
+    public sealed class MySqlCommandBuilder : DbCommandBuilder
+    {
+        private string finalSelect;
+        private bool returnGeneratedIds;
 
-		/// <include file='docs/MySqlCommandBuilder.xml' path='docs/Ctor/*'/>
-		public MySqlCommandBuilder()
-		{
-			QuotePrefix = QuoteSuffix = "`";
-		}
+        #region Constructors
 
-		/// <include file='docs/MySqlCommandBuilder.xml' path='docs/Ctor2/*'/>
-		public MySqlCommandBuilder(MySqlDataAdapter adapter) : this()
-		{
-			DataAdapter = adapter;
-		}
+        /// <include file='docs/MySqlCommandBuilder.xml' path='docs/Ctor/*'/>
+        public MySqlCommandBuilder()
+        {
+            QuotePrefix = QuoteSuffix = "`";
+        }
 
-		#endregion
+        /// <include file='docs/MySqlCommandBuilder.xml' path='docs/Ctor2/*'/>
+        public MySqlCommandBuilder(MySqlDataAdapter adapter)
+            : this()
+        {
+            DataAdapter = adapter;
+        }
 
-		#region Properties
+        #endregion
 
-		/// <include file='docs/mysqlcommandBuilder.xml' path='docs/DataAdapter/*'/>
+        #region Properties
+
+        /// <include file='docs/mysqlcommandBuilder.xml' path='docs/DataAdapter/*'/>
         public new MySqlDataAdapter DataAdapter
         {
             get { return (MySqlDataAdapter)base.DataAdapter; }
@@ -70,28 +74,40 @@ namespace MySql.Data.MySqlClient
             }
         }
 
-		#endregion
+        /// <summary>
+        /// Indicates whether the command builder should generate a SELECT statement
+        /// to populate any autogenerated fields.  We provide this property rather
+        /// than rely on the MySqlCommand.UpdatedRowSource property since a user should
+        /// still be able to write a custom insert command and not have our work interfere.
+        /// </summary>
+        public bool ReturnGeneratedIdentifiers
+        {
+            get { return returnGeneratedIds; }
+            set { returnGeneratedIds = value; }
+        }
 
-		#region Public Methods
+        #endregion
 
-		/// <summary>
-		/// Retrieves parameter information from the stored procedure specified 
-		/// in the MySqlCommand and populates the Parameters collection of the 
-		/// specified MySqlCommand object.
-		/// This method is not currently supported since stored procedures are 
-		/// not available in MySql.
-		/// </summary>
-		/// <param name="command">The MySqlCommand referencing the stored 
-		/// procedure from which the parameter information is to be derived. 
-		/// The derived parameters are added to the Parameters collection of the 
-		/// MySqlCommand.</param>
-		/// <exception cref="InvalidOperationException">The command text is not 
-		/// a valid stored procedure name.</exception>
-		public static void DeriveParameters(MySqlCommand command)
-		{
-			if (!command.Connection.driver.Version.isAtLeast(5,0,0))
-				throw new MySqlException("DeriveParameters is not supported on MySQL versions " +
-					"prior to 5.0");
+        #region Public Methods
+
+        /// <summary>
+        /// Retrieves parameter information from the stored procedure specified 
+        /// in the MySqlCommand and populates the Parameters collection of the 
+        /// specified MySqlCommand object.
+        /// This method is not currently supported since stored procedures are 
+        /// not available in MySql.
+        /// </summary>
+        /// <param name="command">The MySqlCommand referencing the stored 
+        /// procedure from which the parameter information is to be derived. 
+        /// The derived parameters are added to the Parameters collection of the 
+        /// MySqlCommand.</param>
+        /// <exception cref="InvalidOperationException">The command text is not 
+        /// a valid stored procedure name.</exception>
+        public static void DeriveParameters(MySqlCommand command)
+        {
+            if (!command.Connection.driver.Version.isAtLeast(5, 0, 0))
+                throw new MySqlException("DeriveParameters is not supported on MySQL versions " +
+                    "prior to 5.0");
 
             // retrieve the proc definitino from the cache.
             string spName = command.CommandText;
@@ -145,12 +161,13 @@ namespace MySql.Data.MySqlClient
             return (MySqlCommand)GetInsertCommand(false);
         }
 
-		/// <include file='docs/MySqlCommandBuilder.xml' path='docs/RefreshSchema/*'/>
-		public override void RefreshSchema()
-		{
+        /// <include file='docs/MySqlCommandBuilder.xml' path='docs/RefreshSchema/*'/>
+        public override void RefreshSchema()
+        {
             base.RefreshSchema();
-		}
-		#endregion
+            finalSelect = null;
+        }
+        #endregion
 
 
         /// <summary>
@@ -158,20 +175,20 @@ namespace MySql.Data.MySqlClient
         /// </summary>
         /// <param name="columnName"></param>
         /// <returns></returns>
-		protected override string GetParameterName(string columnName)
-		{
-			StringBuilder sb = new StringBuilder(columnName);
-			sb.Replace(" ", "");
-			sb.Replace("/", "_per_");
-			sb.Replace("-", "_");
-			sb.Replace(")", "_cb_");
-			sb.Replace("(", "_ob_");
-			sb.Replace("%", "_pct_");
-			sb.Replace("<", "_lt_");
-			sb.Replace(">", "_gt_");
-			sb.Replace(".", "_pt_");
-			return sb.ToString();
-		}
+        protected override string GetParameterName(string columnName)
+        {
+            StringBuilder sb = new StringBuilder(columnName);
+            sb.Replace(" ", "");
+            sb.Replace("/", "_per_");
+            sb.Replace("-", "_");
+            sb.Replace(")", "_cb_");
+            sb.Replace("(", "_ob_");
+            sb.Replace("%", "_pct_");
+            sb.Replace("<", "_lt_");
+            sb.Replace(">", "_gt_");
+            sb.Replace(".", "_pt_");
+            return sb.ToString();
+        }
 
         protected override DbCommand InitializeCommand(DbCommand command)
         {
@@ -179,7 +196,7 @@ namespace MySql.Data.MySqlClient
         }
 
 
-        protected override void ApplyParameterInfo(DbParameter parameter, DataRow row, 
+        protected override void ApplyParameterInfo(DbParameter parameter, DataRow row,
             StatementType statementType, bool whereClause)
         {
             ((MySqlParameter)parameter).MySqlDbType = (MySqlDbType)row["ProviderType"];
@@ -208,7 +225,42 @@ namespace MySql.Data.MySqlClient
         private void RowUpdating(object sender, MySqlRowUpdatingEventArgs args)
         {
             base.RowUpdatingHandler(args);
+
+            if (args.StatementType != StatementType.Insert) return;
+
+            if (ReturnGeneratedIdentifiers)
+            {
+                if (args.Command.UpdatedRowSource != UpdateRowSource.None)
+                    throw new InvalidOperationException(
+                        Resources.MixingUpdatedRowSource);
+                args.Command.UpdatedRowSource = UpdateRowSource.FirstReturnedRecord;
+                if (finalSelect == null)
+                    CreateFinalSelect();
+            }
+
+            args.Command.CommandText += finalSelect;
         }
 
+        /// <summary>
+        /// We only need to return the single auto generated column since the base
+        /// ADO.Net classes will take care of mapping it onto the datarow for us.
+        /// </summary>
+        private void CreateFinalSelect()
+        {
+            StringBuilder select = new StringBuilder(";SELECT last_insert_id() AS ");
+
+            DataTable dt = GetSchemaTable(DataAdapter.SelectCommand);
+
+            foreach (DataRow row in dt.Rows)
+            {
+                if (!(bool)row["IsAutoIncrement"])
+                    continue;
+
+                select.AppendFormat("`{0}`", row["ColumnName"]);
+                break;
+            }
+
+            finalSelect = select.ToString();
+        }
     }
 }
