@@ -3,6 +3,7 @@ Version 5.0.5
   Bugs fixed
   ----------
   Bug #25605 BINARY and VARBINARY is returned as a string 
+  Bug #25569 UpdateRowSource.FirstReturnedRecord does not work 
 
 Version 5.0.4 2-28-2007
 
